--- a/index.html
+++ b/index.html
@@ -3,34 +3,35 @@
 <head>
     <title>Jogo da Velha</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Jogo da Velha</h1>
 
     <div>
-        <div id="1">-</div>
-        <div id="2">-</div>
-        <div id="3">-</div>
+        <div id="1" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+        <div id="2" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+        <div id="3" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
     </div>
     <div>
-        <div id="4">-</div>
-        <div id="5">-</div>
-        <div id="6">-</div>
+        <div id="4" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+        <div id="5" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+        <div id="6" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
     </div>
     <div>
-        <div id="7">-</div>
-        <div id="8">-</div>
-        <div id="9">-</div>
+        <div id="7" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+        <div id="8" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+        <div id="9" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
     </div>
 
-    <div>
+    <div class="jogador">
         <label>
             Jogador: 
         </label>
         <label id="jogador-selecionado"></label>
     </div>
-    <div>
+    <div class="vencedor">
         <label>
             Vencedor: 
         </label>
@@ -38,9 +39,10 @@
     </div>
     
     <div>
-        <button>
+        <button onclick="reiniciar()">
             Reiniciar
         </button>
     </div>
 </body>
+<script src="jogo.js"></script>
 </html>
